# longbi

./: LICENSE  README.md  pyproject.toml
longbi/: coords.py  longbi.py  ocr.py  trie.py  word_hunt.py
longbi/trie/: makefile  trie.c
